--- a/src/styles/resource-container.scss
+++ b/src/styles/resource-container.scss
@@ -2,6 +2,8 @@
   height: 100vh;
   padding: 50px 150px;
   background-color: $dark;
+  overflow: scroll;
+  overflow-x: hidden;
 
   &--with-nav {
     width: calc(100% - 300px);
@@ -26,7 +28,8 @@
     height: calc(100vh - 140px);
     margin-left: 40px;
     background-color: rgba($light, 0.1);
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: hidden;
 
     .info {
       padding: 40px 20px 20px;
